# json-to-csv-lol

./: README.md  pyproject.toml  pytest.init
.github/workflows/: release.yml  tests.yml
json_to_csv_lol/: __main__.py  converter.py  main.py
tests/: test_converter.py  test_json_to_csv.py
